# prilik-home-control

./: Cargo.toml  README.md
src/: lgtv.rs  main.rs
