[package]
name = "prilik-home-control"
version = "0.1.0"
edition = "2021"

[dependencies]
lg-webos-client = { git = "https://github.com/kziemianek/lg-webos-client.git" }

anyhow = "1.0.66"
clap = { version = "4.0.23", features = ["derive"] }
env_logger = "0.8"
log = "0.4.17"
tokio = { version = "1", default-features = false, features = ["full"] }
wol-rs = "1.0.0"
